--- a/index.html
+++ b/index.html
@@ -31,28 +31,36 @@
     nav {
       background: black;
       padding: 15px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
+      text-align: center;
       z-index: 2;
       position: relative;
     }
 
-    .nav-left, .nav-right {
+    .nav-links {
       display: flex;
-      align-items: center;
-      gap: 20px;
+      justify-content: center;
+      gap: 25px;
+      flex-wrap: wrap;
     }
 
-    .nav-left a, .login-link, .signup-link {
+    .nav-links a {
       color: white;
       text-decoration: none;
+      font-size: 18px;
       font-weight: bold;
     }
 
-    .nav-left a:hover, .login-link:hover, .signup-link:hover {
+    .nav-links a:hover {
+      text-decoration: underline;
       color: #f8c471;
+    }
+
+    .nav-right {
+      margin-top: 10px;
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      justify-content: center;
     }
 
     .search-input {
@@ -63,6 +71,9 @@
     }
 
     .login-link, .signup-link {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
       padding: 8px 16px;
       background-color: #444;
       border-radius: 6px;
@@ -126,6 +137,12 @@
       max-width: 90%;
       z-index: 2;
       text-align: center;
+      transition: opacity 0.5s ease;
+    }
+
+    main.hidden {
+      opacity: 0;
+      pointer-events: none;
     }
 
     footer {
@@ -140,19 +157,14 @@
     }
 
     @media (max-width: 768px) {
-      nav {
+      .nav-links, .nav-right {
         flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .nav-left, .nav-right {
-        flex-direction: column;
-        width: 100%;
+        align-items: center;
+        gap: 10px;
       }
 
       .search-input {
         width: 100%;
-        margin-bottom: 10px;
       }
 
       .login-link, .signup-link {
@@ -181,14 +193,13 @@
   </header>
 
   <nav>
-    <div class="nav-left">
+    <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="product.html">Product</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
       <a href="feedback.html">Feedback</a>
     </div>
-
     <div class="nav-right">
       <input type="text" placeholder="Search..." class="search-input">
       <a href="login.html" class="login-link">Login</a>
@@ -209,7 +220,7 @@
   </video>
 
   <!-- Premium Section -->
-  <main>
+  <main id="premiumSection">
     <h2>EXPERIENCE PREMIUM QUALITY</h2>
     <p>Discover our range of top-tier cigarettes, crafted for a smooth and refined smoking experience.</p>
   </main>
@@ -223,14 +234,17 @@
   <script>
     const bgVideo = document.getElementById('bgVideo');
     const bgImages = document.getElementById('backgroundImages');
+    const premiumSection = document.getElementById('premiumSection');
 
     window.addEventListener('scroll', () => {
       if (window.scrollY > 100) {
         bgVideo.classList.add('active');
         bgImages.classList.add('hidden');
+        premiumSection.classList.add('hidden');
       } else {
         bgVideo.classList.remove('active');
         bgImages.classList.remove('hidden');
+        premiumSection.classList.remove('hidden');
       }
     });
   </script>
