--- a/product.html
+++ b/product.html
@@ -170,7 +170,7 @@
         <div class="product"><img src="baang lichee.JPG" alt=""><p class="BAANG LICHEE 2.4K">Vape 4</p></div>
         <div class="product"><img src="baang mixed fruit.JPG" alt=""><p class="BAANG MIXED FRUIT 2.4K">Vape 5</p></div>
         <div class="product"><img src="baang peach ice.JPG" alt=""><p class="BAANG PEACH ICE 2.4K">Vape 6</p></div>
-        <div class="product"><img src="ivg 2400 ice pop.JPG" alt=""><p class="IVG 2400 ICE POP">Vape 7</p></div>
+        <div class="product"><img src="ivg 2400 maroon.webp" alt=""><p class="IVG 2400 KIWI">Vape 7</p></div>
         <div class="product"><img src="ivg 2400 strawberry.JPG" alt=""><p class="IVG 2400 STRAWBERRY">Vape 8</p></div>
         <div class="product"><img src="ivg 2400 tropical.JPG" alt=""><p class="IVG 2400 TROPICAL">Vape 9</p></div>
       </div>
