--- a/product.html
+++ b/product.html
@@ -99,6 +99,63 @@
       font-size: 14px;
       text-align: center;
     }
+.product {
+  width: 220px;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: transform 0.3s ease;
+}
+
+.product:hover {
+  transform: scale(0.95);
+}
+
+.product img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 10px;
+  transition: transform 0.3s ease;
+}
+
+.product-info {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.75);
+  color: white;
+  padding: 10px;
+  font-size: 14px;
+  opacity: 0;
+  transform: translateY(100%);
+  transition: all 0.3s ease;
+  text-align: center;
+}
+
+.product:hover .product-info {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+  .add-to-cart {
+  margin-top: 8px;
+  padding: 6px 12px;
+  background-color: #f8c471;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.add-to-cart:hover {
+  background-color: #f0b849;
+}
+  
   </style>
 </head>
 <body>
@@ -108,13 +165,18 @@
   </header>
 
   <nav>
+  <div style="display: flex; justify-content: center; align-items: center; flex: 1; gap: 20px; flex-wrap: wrap;">
     <a href="index.html">Home</a>
     <a href="product.html">Product</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
     <a href="feedback.html">Feedback</a>
-  </nav>
-
+  </div>
+  <div style="color: white; font-weight: bold; margin-left: auto; padding-right: 20px;">
+    🛒 Cart: <span id="cart-count">0</span>
+  </div>
+</nav>
+  
   <main>
 
     <!-- Tobacco Section -->
@@ -194,6 +256,16 @@
   <footer>
     <p>&copy; 2025 GrimmDraw | All Rights Reserved</p>
   </footer>
+<script>
+  let cartCount = 0;
 
+  document.querySelectorAll('.add-to-cart').forEach(button => {
+    button.addEventListener('click', () => {
+      cartCount++;
+      document.getElementById('cart-count').innerText = cartCount;
+    });
+  });
+</script>
+  
 </body>
 </html>
