--- a/product.html
+++ b/product.html
@@ -183,15 +183,15 @@
     <section class="category" id="tobacco">
       <h2>Tobacco</h2>
       <div class="product-grid">
-        <div class="product"><img src="seven stars cig.JPG" alt=""><p class="SEVEN STARS CIGARETTES">Tobacco 1</p></div>
-        <div class="product"><img src="red apple cig.JPG" alt=""><p class="RED APPLE CIGATETTES">Tobacco 2</p></div>
-        <div class="product"><img src="nike cig.jpeg" alt=""><p class="CUSTOM NIKE CIGARETTES">Tobacco 3</p></div>
-        <div class="product"><img src="lucky strike cig.JPG" alt=""><p class="LUCKY STRIKE CIGARETTES">Tobacco 4</p></div>
-        <div class="product"><img src="hupman.jpg" alt=""><p class="HUPMAN CIGARETTES">Tobacco 5</p></div>
-        <div class="product"><img src="waltz.jpeg" alt=""><p class="WALTZ CIGARETTES">Tobacco 6</p></div>
-        <div class="product"><img src="marlboro.JPG" alt=""><p class=" VINTAGE MARLBORO CIGARETTES">Tobacco 7</p></div>
-        <div class="product"><img src="brown bear herbs.jpg" alt=""><p class="BROWN BEAR CIGARETTES">Tobacco 8</p></div>
-        <div class="product"><img src="newport mentol.jpeg" alt=""><p class="NEWPORT CIGARETTES">Tobacco 9</p></div>
+        <div class="product"><img src="seven stars cig.JPG" alt=""><p class="SEVEN STARS CIGARETTES">SEVEN STARS CIGARETTES</p></div>
+        <div class="product"><img src="red apple cig.JPG" alt=""><p class="RED APPLE CIGATETTES">RED APPLE CIGARETTES</p></div>
+        <div class="product"><img src="nike cig.jpeg" alt=""><p class="CUSTOM NIKE CIGARETTES">CUSTOM NIKE CIGARETTES</p></div>
+        <div class="product"><img src="lucky strike cig.JPG" alt=""><p class="LUCKY STRIKE CIGARETTES">LUCKY STRIKE CIGARETTES</p></div>
+        <div class="product"><img src="hupman.jpg" alt=""><p class="HUPMAN CIGARETTES">HUPMAN CIGARETTES</p></div>
+        <div class="product"><img src="waltz.jpeg" alt=""><p class="WALTZ CIGARETTES">WALTS CIGARETTES</p></div>
+        <div class="product"><img src="marlboro.JPG" alt=""><p class=" VINTAGE MARLBORO CIGARETTES">VINTAGE MARLBORO CIGARETTES</p></div>
+        <div class="product"><img src="brown bear herbs.jpg" alt=""><p class="BROWN BEAR CIGARETTES">BROWN BEAR CIGARETTES</p></div>
+        <div class="product"><img src="newport mentol.jpeg" alt=""><p class="NEWPORT CIGARETTES">NEWPORT CIGARETTES</p></div>
       </div>
     </section>
 
@@ -199,9 +199,9 @@
     <section class="category" id="nicotine">
       <h2>Nicotine Pouches</h2>
       <div class="product-grid">
-        <div class="product"><img src="zyn chill.WEBP" alt=""><p class="ZYN CHILLS">Pouch 1</p></div>
-        <div class="product"><img src="zyn citrus.WEBP" alt=""><p class="ZYN CITRUS">Pouch 2</p></div>
-        <div class="product"><img src="zyn wintergreen.WEBP" alt=""><p class="ZYN WINTERGREEN">Pouch 3</p></div>
+        <div class="product"><img src="zyn chill.WEBP" alt=""><p class="ZYN CHILLS">ZYN CHILLS</p></div>
+        <div class="product"><img src="zyn citrus.WEBP" alt=""><p class="ZYN CITRUS">ZYN CITRUS</p></div>
+        <div class="product"><img src="zyn wintergreen.WEBP" alt=""><p class="ZYN WINTERGREEN">ZYN WINTERGREEN</p></div>
        
       </div>
     </section>
@@ -210,15 +210,15 @@
     <section class="category" id="lighters">
       <h2>Lighters</h2>
       <div class="product-grid">
-        <div class="product"><img src="taylor swift lighter.JPG" alt=""><p class="TAYLOR SWIFT CUSTOM LIGHTER">Lighter 1</p></div>
-        <div class="product"><img src="the shining lighter.JPG" alt=""><p class="THE SHINING LIGHTER">Lighter 2</p></div>
-        <div class="product"><img src="rip bt lighter.JPG" alt=""><p class="RIP BETTER DAYS LIGHTER">Lighter 3</p></div>
-        <div class="product"><img src="fuck it lighter.JPG" alt=""><p class="F*CK IT LIGHTER">Lighter 4</p></div>
-        <div class="product"><img src="escape lighter.JPG" alt=""><p class="ESCAPE LIGHTER">Lighter 5</p></div>
-        <div class="product"><img src="BAD lighter.JPG" alt=""><p class="CUSTOM BAD LIGHTER">Lighter 6</p></div>
-        <div class="product"><img src="wavey lighter.JPG" alt=""><p class="CUSTOM WAVEY LIGHTER">Lighter 7</p></div>
-        <div class="product"><img src="edward lighter.JPG" alt=""><p class="EDWARD SCISSOR HANDS LIGHTER">Lighter 8</p></div>
-        <div class="product"><img src="80s lighter.JPG" alt=""><p class="CUSTOM 80s LIGHTER">Lighter 9</p></div>
+        <div class="product"><img src="taylor swift lighter.JPG" alt=""><p class="TAYLOR SWIFT CUSTOM LIGHTER">TAYLOR SWIFT CUSTOM LIGHTER</p></div>
+        <div class="product"><img src="the shining lighter.JPG" alt=""><p class="THE SHINING LIGHTER">THE SHINING LIGHTER</p></div>
+        <div class="product"><img src="rip bt lighter.JPG" alt=""><p class="RIP BETTER DAYS LIGHTER">RIP BETTER DAYS LIGHTER</p></div>
+        <div class="product"><img src="fuck it lighter.JPG" alt=""><p class="F*CK IT LIGHTER">F*CK IT LIGHTER</p></div>
+        <div class="product"><img src="escape lighter.JPG" alt=""><p class="ESCAPE LIGHTER">ESCAPE LIGHTER</p></div>
+        <div class="product"><img src="BAD lighter.JPG" alt=""><p class="CUSTOM BAD LIGHTER">CUSTOM BAD LIGHTER</p></div>
+        <div class="product"><img src="wavey lighter.JPG" alt=""><p class="CUSTOM WAVEY LIGHTER">CUSTOM WAVEY LIGHTER</p></div>
+        <div class="product"><img src="edward lighter.JPG" alt=""><p class="EDWARD SCISSOR HANDS LIGHTER">EDWARD SCICCOR HANDS LIGHTER</p></div>
+        <div class="product"><img src="80s lighter.JPG" alt=""><p class="CUSTOM 80s LIGHTER">CUSTOM 80S LIGHTER</p></div>
       </div>
     </section>
 
@@ -226,15 +226,15 @@
     <section class="category" id="vapes">
       <h2>Vapes</h2>
       <div class="product-grid">
-        <div class="product"><img src="vozol CB juice.JPG" alt=""><p class="VOZOL CARIBBEAN JUICE 20K">Vape 1</p></div>
-        <div class="product"><img src="vozol bluecherry.WEBP" alt=""><p class="VOZOL BLUECHERRY 20K">Vape 2</p></div>
-        <div class="product"><img src="vozol strawberry.WEBP" alt=""><p class="VOZOL STRAWBERRY 20K">Vape 3</p></div>
-        <div class="product"><img src="baang lichee.JPG" alt=""><p class="BAANG LICHEE 2.4K">Vape 4</p></div>
-        <div class="product"><img src="baang mixed fruit.JPG" alt=""><p class="BAANG MIXED FRUIT 2.4K">Vape 5</p></div>
-        <div class="product"><img src="baang peach ice.JPG" alt=""><p class="BAANG PEACH ICE 2.4K">Vape 6</p></div>
-        <div class="product"><img src="ivg 2400 maroon.webp" alt=""><p class="IVG 2400 KIWI">Vape 7</p></div>
-        <div class="product"><img src="ivg 2400 strawberry.JPG" alt=""><p class="IVG 2400 STRAWBERRY">Vape 8</p></div>
-        <div class="product"><img src="ivg 2400 tropical.JPG" alt=""><p class="IVG 2400 TROPICAL">Vape 9</p></div>
+        <div class="product"><img src="vozol CB juice.JPG" alt=""><p class="VOZOL CARIBBEAN JUICE 20K">VOZOL CARIBBBEAN JUICE 20K</p></div>
+        <div class="product"><img src="vozol bluecherry.WEBP" alt=""><p class="VOZOL BLUECHERRY 20K">VOZOL BLUECHERRY 20K</p></div>
+        <div class="product"><img src="vozol strawberry.WEBP" alt=""><p class="VOZOL STRAWBERRY 20K">VOZOL STRAWBERRY 20K</p></div>
+        <div class="product"><img src="baang lichee.JPG" alt=""><p class="BAANG LICHEE 2.4K">BAANG LICHEE 2.4K</p></div>
+        <div class="product"><img src="baang mixed fruit.JPG" alt=""><p class="BAANG MIXED FRUIT 2.4K">BAANG MIXED FRUIT 2.4K</p></div>
+        <div class="product"><img src="baang peach ice.JPG" alt=""><p class="BAANG PEACH ICE 2.4K">BAANG PEACH ICE 2.4K</p></div>
+        <div class="product"><img src="ivg 2400 maroon.webp" alt=""><p class="IVG 2400 KIWI">IVG 2400 KIWI</p></div>
+        <div class="product"><img src="ivg 2400 strawberry.JPG" alt=""><p class="IVG 2400 STRAWBERRY">IVG 2400 STRAWBERRY</p></div>
+        <div class="product"><img src="ivg 2400 tropical.JPG" alt=""><p class="IVG 2400 TROPICAL">IVG 2400 TROPICAL</p></div>
       </div>
     </section>
 
@@ -242,11 +242,11 @@
     <section class="category" id="other">
       <h2>Other Products</h2>
       <div class="product-grid">
-        <div class="product"><img src="burn baby burn ash tray.JPG" alt=""><p class="BBB ASH TRAY">Other 1</p></div>
-        <div class="product"><img src="marlboro ash tray.jpeg" alt=""><p class="CUSTOM MARLBORO ASH TRAY">Other 2</p></div>
-        <div class="product"><img src="marlboro drawer.jpeg" alt=""><p class="CUSTOM MARALBORO DRAWER">Other 3</p></div>
-        <div class="product"><img src="only for hot person ash tray.JPG" alt=""><p class="OFHP ASH TRAY">Other 4</p></div>
-        <div class="product"><img src="puff puff pass ash tray.JPG" alt=""><p class="PPP ASH TRAY">Other 5</p></div>
+        <div class="product"><img src="burn baby burn ash tray.JPG" alt=""><p class="BBB ASH TRAY">BBB ASG TRAY</p></div>
+        <div class="product"><img src="marlboro ash tray.jpeg" alt=""><p class="CUSTOM MARLBORO ASH TRAY">CUSTOM MARLBORO ASH TRAY</p></div>
+        <div class="product"><img src="marlboro drawer.jpeg" alt=""><p class="CUSTOM MARALBORO DRAWER">CUSTOM MARLBORO DRAWER</p></div>
+        <div class="product"><img src="only for hot person ash tray.JPG" alt=""><p class="OFHP ASH TRAY">OFHP ASH TRAY</p></div>
+        <div class="product"><img src="puff puff pass ash tray.JPG" alt=""><p class="PPP ASH TRAY">PPP ASH TRAY</p></div>
         
       </div>
     </section>
