--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
       <a href="feedback.html">Feedback</a>
+   <a href="cart.html">cart</a>   
+    
     </div>
     <div class="nav-right">
       <input type="text" placeholder="Search..." class="search-input">
