--- a/cart.html
+++ b/cart.html
@@ -155,8 +155,11 @@
   <header>GrimmDraw</header>
 
   <nav>
-    
-  </nav>
+    <a href="index.html">Home</a>
+    <a href="product.html">Product</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    <a href="feedback.html">Feedback</a>  </nav>
 
   <main class="cart-container">
     <div class="cart-title">Your Shopping Cart</div>
