--- a/cart.html
+++ b/cart.html
@@ -15,7 +15,7 @@
       font-family: Arial, sans-serif;
       color: white;
       /* 🔽 Set your wallpaper background image here */
-      background: url('wallpaper.jpg') no-repeat center center fixed;
+      background: url('shopping trolly.jpg') no-repeat center center fixed;
       background-size: cover;
     }
 
