--- a/about.html
+++ b/about.html
@@ -136,7 +136,9 @@
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
     <a href="feedback.html">Feedback</a>
-  </nav>
+<a href="cart.html">cart</a>  
+
+</nav>
 
   <div class="spacer"></div>
 
