--- a/product.html
+++ b/product.html
@@ -171,6 +171,8 @@
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
     <a href="feedback.html">Feedback</a>
+<a href="cart.html">cart</a>
+  
   </div>
   <div style="color: white; font-weight: bold; margin-left: auto; padding-right: 20px;">
     🛒 Cart: <span id="cart-count">0</span>
