--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,9 @@
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
         <a href="feedback.html">Feedback</a>
-    </nav>
+        <a href="cart.html">cart</a>   
+
+ </nav>
 
     <main>
         <div class="contact-container">
