--- a/feedback.html
+++ b/feedback.html
@@ -98,6 +98,8 @@ VP Sales: <input type="checkbox" >
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
         <a href="feedback.html">feedback</a>    
-    </nav>  
+<a href="cart.html">cart</a>   
+   
+   </nav>  
 
 </form>
