--- a/feedback.html
+++ b/feedback.html
@@ -107,7 +107,18 @@
       color: white;
       font-size: 2em;
     }
-  </style>
+
+footer {
+      background: rgba(0, 0, 0, 0.8);
+      padding: 10px;
+      font-size: 14px;
+      text-align: center;
+      width: 100%;
+      margin-top: auto;
+      z-index: 1;
+
+   }  
+</style>
 </head>
 <body>  
   First name:<br> <input type="text" name="firstname" value="Mickey"><br>
