--- a/feedback.html
+++ b/feedback.html
@@ -147,6 +147,11 @@ VP Sales: <input type="checkbox" >
   <input type="radio" name="gender" value="female"> Female<br> 
   <input type="radio" name="gender" value="other"> Other 
 
+<footer>
+    <p>&copy; 2025 GrimmDraw | All Rights Reserved</p>
+  </footer>
+</body>
+
    <nav>
         <a href="index.html">Home</a>
         <a href="product.html">Product</a>
