--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,5 @@
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,6 +32,7 @@
             padding: 15px;
             display: flex;
             justify-content: center;
+            flex-wrap: wrap;
         }
 
         nav a {
@@ -113,13 +112,12 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="product.html">Product</a>        
+        <a href="product.html">Product</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
         <a href="feedback.html">Feedback</a>
-        <a href="cart.html">cart</a>   
-
- </nav>
+        <a href="cart.html">Cart</a>
+    </nav>
 
     <main>
         <div class="contact-container">
