--- a/product.html
+++ b/product.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Products | GrimmDraw</title>
   <style>
+
+<link rel="stylesheet" href="style.css" />
     * {
       margin: 0;
       padding: 0;
