--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <title>About Us | GrimmDraw</title>
 
   <style>
+<link rel="stylesheet" href="style.css" />
     * {
       margin: 0;
       padding: 0;
