--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 
     <style>
+
+<link rel="stylesheet" href="style.css" />      
+        
         body {
             font-family: Arial, sans-serif;
             margin: 0;
