--- a/cart.html
+++ b/cart.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cart | GrimmDraw</title>
-  <style>
-    * {
+
+  <link rel="stylesheet" href="style.css" />  <style>
+    
+     {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
@@ -159,7 +161,8 @@
     <a href="product.html">Product</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
-    <a href="feedback.html">Feedback</a>  </nav>
+    <a href="feedback.html">Feedback</a>  
+<a href="cart.html">cart</a> </nav>
 
   <main class="cart-container">
     <div class="cart-title">Your Shopping Cart</div>
